--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "prop-types": "^15.7.2",
         "query-string": "^7.0.1",
         "react-scripts": "^5.0.1",
+        "react-select": "^1.2.1",
         "use-debounce": "^7.0.0"
     }
 }
