--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -27,12 +27,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
                   node-version: 18.x
-
-            - uses: c-hive/gha-yarn-cache@v1
-            - run: yarn install --frozen-lockfile
+                  cache: 'yarn'
 
             - name: Build
               run: yarn d2-app-scripts build
@@ -49,12 +47,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
                   node-version: 18.x
-
-            - uses: c-hive/gha-yarn-cache@v1
-            - run: yarn install --frozen-lockfile
 
             # Can be removed if translations aren't required for tests,
             # or if not using the App Platform
@@ -68,12 +63,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
                   node-version: 18.x
+                  cache: 'yarn'
 
-            - uses: c-hive/gha-yarn-cache@v1
-            - run: yarn install --frozen-lockfile
 
             # Can be removed if translations aren't required for tests,
             # or if not using the App Platform
@@ -124,17 +118,14 @@ jobs:
               with:
                   token: ${{ secrets.DHIS2_BOT_GITHUB_TOKEN }}
 
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
                   node-version: 18.x
+                  cache: 'yarn'
 
             - uses: actions/download-artifact@v4
               with:
                   name: app-build
-
-            # ensure that d2-app-scripts is available
-            - uses: c-hive/gha-yarn-cache@v1
-            - run: yarn install --frozen-lockfile
 
             - uses: dhis2/action-semantic-release@master
               with:
