--- a/.github/workflows/dhis2-verify-commits.yml
+++ b/.github/workflows/dhis2-verify-commits.yml
@@ -8,8 +8,11 @@ jobs:
     lint-pr-title:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: c-hive/gha-yarn-cache@v1
+            -   uses: actions/checkout@v2
+            -   uses: actions/setup-node@v3
+                with:
+                    node-version: 18.x
+                    cache: 'yarn'
             - run: yarn install --frozen-lockfile
             - id: commitlint
               run: echo ::set-output name=config_path::$(node -e "process.stdout.write(require('@dhis2/cli-style').config.commitlint)")
@@ -20,10 +23,13 @@ jobs:
     lint-commits:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-              with:
-                  fetch-depth: 0
-            - uses: c-hive/gha-yarn-cache@v1
+            -   uses: actions/checkout@v2
+                with:
+                    fetch-depth: 0
+            -   uses: actions/setup-node@v3
+                with:
+                    node-version: 18.x
+                    cache: 'yarn'
             - run: yarn install --frozen-lockfile
             - id: commitlint
               run: echo ::set-output name=config_path::$(node -e "process.stdout.write(require('@dhis2/cli-style').config.commitlint)")
