--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -31,6 +31,7 @@ jobs:
               with:
                   node-version: 18.x
                   cache: 'yarn'
+            - run: yarn install --frozen-lockfile
 
             - name: Build
               run: yarn d2-app-scripts build
@@ -50,6 +51,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 18.x
+            - run: yarn install --frozen-lockfile
 
             # Can be removed if translations aren't required for tests,
             # or if not using the App Platform
@@ -67,7 +69,7 @@ jobs:
               with:
                   node-version: 18.x
                   cache: 'yarn'
-
+            - run: yarn install --frozen-lockfile
 
             # Can be removed if translations aren't required for tests,
             # or if not using the App Platform
@@ -122,10 +124,13 @@ jobs:
               with:
                   node-version: 18.x
                   cache: 'yarn'
+            - run: yarn install --frozen-lockfile
 
             - uses: actions/download-artifact@v4
               with:
                   name: app-build
+
+            - run: yarn install --frozen-lockfile
 
             - uses: dhis2/action-semantic-release@master
               with:
