--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     },
     "dependencies": {
         "@dhis2/app-runtime": "^3.2.1",
+        "@dhis2/multi-calendar-dates": "^2.0.0",
         "@dhis2/prop-types": "^1.6.4",
         "@dhis2/ui": "^7.2.7",
         "dompurify": "^3.2.4",
