--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -79,38 +79,38 @@ jobs:
             - name: Test
               run: yarn d2-app-scripts test
 
-    e2e-v41:
-        runs-on: ubuntu-latest
-        if: "!github.event.push.repository.fork && github.actor != 'dependabot[bot]'"
+    # e2e-v41:
+    #     runs-on: ubuntu-latest
+    #     if: "!github.event.push.repository.fork && github.actor != 'dependabot[bot]'"
 
-        strategy:
-            fail-fast: false
-            matrix:
-                containers: [1, 2]
+    #     strategy:
+    #         fail-fast: false
+    #         matrix:
+    #             containers: [1, 2]
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
+    #     steps:
+    #         - name: Checkout
+    #           uses: actions/checkout@v2
 
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 18.x
+    #         - uses: actions/setup-node@v1
+    #           with:
+    #               node-version: 18.x
 
-            - name: End-to-End tests
-              uses: cypress-io/github-action@v2
-              with:
-                  start: yarn d2-app-scripts start
-                  wait-on: 'http://localhost:3000'
-                  wait-on-timeout: 300
-                  record: true
-                  parallel: true
-              env:
-                  BROWSER: none
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-                  CYPRESS_dhis2BaseUrl: http://localhost:8080
-                  CYPRESS_dhis2ApiVersion: 41
-                  CYPRESS_networkMode: stub
+    #         - name: End-to-End tests
+    #           uses: cypress-io/github-action@v2
+    #           with:
+    #               start: yarn d2-app-scripts start
+    #               wait-on: 'http://localhost:3000'
+    #               wait-on-timeout: 300
+    #               record: true
+    #               parallel: true
+    #           env:
+    #               BROWSER: none
+    #               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #               CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+    #               CYPRESS_dhis2BaseUrl: http://localhost:8080
+    #               CYPRESS_dhis2ApiVersion: 41
+    #               CYPRESS_networkMode: stub
     release:
         runs-on: ubuntu-latest
         needs: [build, lint, test]
