--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -79,38 +79,26 @@ jobs:
             - name: Test
               run: yarn d2-app-scripts test
 
-    e2e-v41:
+    e2e:
         runs-on: ubuntu-latest
-        if: "!github.event.push.repository.fork && github.actor != 'dependabot[bot]'"
-
-        strategy:
-            fail-fast: false
-            matrix:
-                containers: [1, 2]
-
         steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-
-            - uses: actions/setup-node@v1
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
-                  node-version: 20.x
-
-            - name: End-to-End tests
-              uses: cypress-io/github-action@v6
+                  node-version: 20
+                  cache: yarn
+            - uses: cypress-io/github-action@v6
               with:
-                  start: yarn d2-app-scripts start
-                  wait-on: 'http://localhost:3000'
-                  wait-on-timeout: 300
-                  record: true
-                  parallel: true
+                  start: npx --yes @dhis2/cli-cluster up 2.43 --channel dev --db-version 2.43 --seed, yarn start:nobrowser
+                  wait-on: http://localhost:8080/dhis-web-commons/security/login.action, http://localhost:3000
+                  wait-on-timeout: 600
               env:
-                  BROWSER: none
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-                  CYPRESS_dhis2BaseUrl: http://localhost:8080
-                  CYPRESS_dhis2ApiVersion: 43
-                  CYPRESS_networkMode: stub
+                  CYPRESS_LOGIN_NAME: ${{ secrets.CYPRESS_LOGIN_NAME }}
+                  CYPRESS_LOGIN_PASSWORD: ${{ secrets.CYPRESS_LOGIN_PASSWORD }}
+                  CYPRESS_LOGIN_SERVER: http://localhost:8080
+            - run: npx --yes @dhis2/cli-cluster down 2.43
+
     release:
         runs-on: ubuntu-latest
         needs: [build, lint, test]
