fix: update cypress (start with claude ai)

--- a/package.json
+++ b/package.json
@@ -13,15 +13,7 @@
         "start": "d2-app-scripts start",
         "start:nobrowser": "BROWSER=none d2-app-scripts start",
         "test": "TZ=Etc/UTC d2-app-scripts test",
-        "cypress:capture-v37": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=37,dhis2BaseUrl=http://localhost:8082,networkMode=capture'",
-        "cypress:stub-v37": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=37,dhis2BaseUrl=http://localhost:8082,networkMode=stub'",
-        "cypress:capture-v38": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=38,dhis2BaseUrl=http://localhost:8081,networkMode=capture'",
-        "cypress:stub-v38": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=38,dhis2BaseUrl=http://localhost:8081,networkMode=stub'",
         "cypress:live": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress open --env networkMode=live'",
-        "cypress:capture-v39": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=39,networkMode=capture'",
-        "cypress:stub-v39": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=39,networkMode=stub'",
-        "cypress:capture-v40": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=40,networkMode=capture'",
-        "cypress:stub-v40": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=40,networkMode=stub'",
         "cypress:capture": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=41,networkMode=capture'",
         "cypress:stub": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=41,networkMode=stub'"
     },
@@ -29,14 +21,15 @@
         "@cfaester/enzyme-adapter-react-18": "^0.8.0",
         "@dhis2/cli-app-scripts": "^12.3.0",
         "@dhis2/cli-style": "^10.7.6",
-        "@dhis2/cypress-commands": "^9.0.2",
-        "@dhis2/cypress-plugins": "^9.0.2",
+        "@dhis2/cypress-commands": "^10.1.0",
+        "@dhis2/cypress-plugins": "^10.1.0",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.1",
-        "cypress": "^9.7.0",
-        "cypress-cucumber-preprocessor": "^4.3.1",
+        "cypress": "^13.17.0",
+        "@badeball/cypress-cucumber-preprocessor": "^21.0.0",
+        "@cypress/webpack-preprocessor": "^6.0.2",
         "enzyme": "^3.11.0",
         "identity-obj-proxy": "^3.0.0",
         "start-server-and-test": "^1.13.1"
@@ -53,6 +46,7 @@
         "use-debounce": "^7.0.0"
     },
     "resolutions": {
-        "eslint-plugin-import": "^2.25.1"
+        "eslint-plugin-import": "^2.25.1",
+        "webpack": "^5.104.1"
     }
 }
