--- a/.github/workflows/dhis2-verify-commits.yml
+++ b/.github/workflows/dhis2-verify-commits.yml
@@ -8,10 +8,10 @@ jobs:
     lint-pr-title:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v3
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
-                  node-version: 18.x
+                  node-version: 20
                   cache: 'yarn'
             - run: yarn install --frozen-lockfile
             - id: commitlint
@@ -23,12 +23,12 @@ jobs:
     lint-commits:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
               with:
                   fetch-depth: 0
-            - uses: actions/setup-node@v3
+            - uses: actions/setup-node@v4
               with:
-                  node-version: 18.x
+                  node-version: 20
                   cache: 'yarn'
             - run: yarn install --frozen-lockfile
             - id: commitlint
