--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -81,35 +81,22 @@ jobs:
 
     e2e:
         runs-on: ubuntu-latest
-        if: "!github.event.push.repository.fork && github.actor != 'dependabot[bot]'"
-
-        strategy:
-            fail-fast: false
-            matrix:
-                containers: [1, 2]
-
         steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-
+            - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
               with:
                   node-version: 20
-
-            - name: End-to-End tests
-              uses: cypress-io/github-action@v2
+                  cache: yarn
+            - uses: cypress-io/github-action@v6
               with:
                   start: yarn d2-app-scripts start
                   wait-on: 'http://localhost:3000'
                   wait-on-timeout: 300
-                  record: true
-                  parallel: true
               env:
                   BROWSER: none
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-                  CYPRESS_dhis2BaseUrl: http://localhost:8080
-                  CYPRESS_dhis2ApiVersion: 43
+                  CYPRESS_dhis2BaseUrl: http://localhost:9090
+                  CYPRESS_dhis2ApiVersion: ${{ inputs.api_version }}
                   CYPRESS_networkMode: stub
     release:
         runs-on: ubuntu-latest
